<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmpresaActivity"
    android:background="@color/azul"
    >

    <EditText
        android:id="@+id/editNomeEmpresa"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="#FFFFFF"
        android:breakStrategy="simple"
        android:ems="10"
        android:hint="@string/nomeEmpresa"
        android:inputType="textPersonName"
        android:padding="5dip"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDescricaoEmpresa"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/descEmpresa"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNomeEmpresa" />

    <EditText
        android:id="@+id/editRede"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/linkEmpresa"
        android:inputType="text"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescricaoEmpresa" />

    <EditText
        android:id="@+id/editCidade"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/cidadeEmpresa"
        android:inputType="text"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFone" />

    <EditText
        android:id="@+id/editFone"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/telEmpresa"
        android:inputType="text"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRede" />

    <CheckBox
        android:id="@+id/checkDelivery"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:buttonTint="@color/coral"
        android:checked="true"
        android:textAlignment="center"
        android:text="@string/delivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCidade"
        android:background="@drawable/rounded_edittext"
        />

    <Button
        android:id="@+id/finalizarCadastroEmpresa"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/coralbutton"
        android:onClick="finalizarCadastroEmpresa"
        android:text="Cadastrar empresa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkDelivery"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>