<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul"
    tools:context=".CadastroActivity">

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:contentDescription="@string/senha"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:password="true"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editPasswordConfirm"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:contentDescription="@string/confirmSenha"
        android:ems="10"
        android:hint="@string/confirmSenha"
        android:inputType="textPassword"
        android:password="true"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="#FFFFFF"
        android:breakStrategy="simple"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:padding="5dip"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:background="@drawable/coralbutton"
        android:onClick="cancelarCadastro"
        android:scaleType="fitCenter"
        android:text="Cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalizarCadastroPessoa"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textConfirmSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordConfirm" />

    <Button
        android:id="@+id/finalizarCadastroPessoa"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/coralbutton"
        android:onClick="completarCadastro"
        android:text="@string/finCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mulherButton" />

    <Button
        android:id="@+id/mulherButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/coralbutton"
        android:onClick="launchCadastroEmpresa"
        android:text="@string/cadastroEmpresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textConfirmSenha" />

</androidx.constraintlayout.widget.ConstraintLayout>